--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
-pywin32==306
+pywin32
 PyYAML==6.0.1
 pyzmq==26.0.3
 rich==13.7.1
