--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
-pywin32
 PyYAML==6.0.1
 pyzmq==26.0.3
 rich==13.7.1
@@ -76,3 +75,4 @@ uvicorn==0.30.1
 watchfiles==0.22.0
 wcwidth==0.2.13
 websockets==12.0
+gunicorn
