--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,7 +15,7 @@ jobs:
       SECRET_KEY: ${{secrets.SECRET_KEY}}
       ALGORITHM: ${{secrets.ALGORITHM}}
       EXPIRATION_TIME_OF_TOKEN: ${{secrets.EXPIRATION_TIME_OF_TOKEN}}
-
+      
     services:
       postgres:
         image: postgres
@@ -29,7 +29,9 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Pulling git repo
         uses: actions/checkout@v2
@@ -49,23 +51,24 @@ jobs:
         run: |
           pip install pytest
           pytest --disable-warnings -v -s
+
       - name: Just Random Printing
         run: |
           echo "Workflow Running... Well done"
 
-  docker_build_and_publish: 
-          needs: build 
-          runs-on: ubuntu-latest
-          steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
+  docker_build_and_publish:
+    needs: build
+    runs-on: ubuntu-latest
 
-            - name: Build Docker image
-              run: docker build -t ${{secrets.DOCKER_HUB_USERNAME}}/fastapi-flash:latest .
-            
-            - name: Publish to Docker Registry 
-            uses: elgohr/Publish-Docker-Github-Action@v5 
-            with:
-              name: ${{secrets.DOCKER_HUB_USERNAME}}/fastapi-flash
-              username: ${{secrets.DOCKER_HUB_USERNAME}}  
-              password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-flash:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-flash:latest
