--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,15 @@ sonar.projectVersion=1.0
 # Comma-separated paths to directories containing source files
 sonar.sources=.
 
-# Language of the source code
+# Language
 sonar.language=py
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+# URL of the SonarQube server
+sonar.host.url=http://localhost:9000
+
+# Authentication token
+sonar.login=sqa_5c43aa89714e2dc2662f00d08b289bd7fb47dda9
+
