--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,6 +1,7 @@
 name: Build and Deploy Code
 
-on: [push, pull_request]
+# on: [push, pull_request]
+on: workflow_dispatch # Manually Trigger the Workflow
 
 jobs:
   build:
